--- a/src/View/login.form
+++ b/src/View/login.form
@@ -76,6 +76,9 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="jf_username">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jf_usernameActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jf_pass">
     </Component>
